# auv_mission_control

./: CMakeLists.txt  CMakeLists.txt.save  README.md  package.xml
cfg/: mission_profiles.yaml  pid.yaml
include/auv_mission_control/: Axis.hpp  BackplaneManager.hpp  Camera.h  Camera.hpp  CameraManager.h  Logger.hpp  Macho.hpp  Mission.hpp  Multilateration.hpp  PidManager.h  PidManager.hpp  PointerHandler.hpp  StateMachine.h  StateMachine.hpp  TTask.hpp  Task.h  Task.hpp  TaskBuoy.h  TaskBuoy.hpp  TaskExample.hpp  TaskGate.h  TaskGate.hpp  TaskGate.h~HEAD  TaskGateVision.h  TaskKill.h  TaskMarker.h  TaskMarker.hpp  TaskQualGate.h  TaskTest.h  TaskTest.hpp  TaskVision.h  TemplateStates.hpp  Timer.h  Timer.hpp  Vision.h  Vision.hpp  cpp_magic.hpp  drive_along_marker.h  enum.hpp  kill.h  (+13 more)
include/auv_mission_control/Actions/: MarkerAlign.hpp
include/auv_mission_control/Time_Management/: TimeTask.hpp  Time_Allocator.hpp
include/auv_mission_control/action/: GoToDepth.hpp  MarkerAlign.hpp  Move.hpp  Timer.hpp  Turn.hpp  turn.hpp
include/auv_mission_control/mission/: Base.hpp  Controller.hpp  Mission.hpp  Test.hpp
include/mission_control/: pid_manager.h  pid_parameters.h  task.h  task_gate.h
launch/: autostart.launch  controller.launch  debug.launch  depth.launch  fullrun.launch  start.launch  startimu.launch  tune.launch  tuning.launch
msg/: pid_plantState.msg
src/: Axis.cpp  BackplaneManager.cpp  Camera.cpp  CameraManager.cpp  Logger.cpp  Macho.cpp  Mission.cpp  Multilateration.cpp  PidManager.cpp  PidManager.cpp.save  PidManager.cpp.save.1  PidManager_workingSave.cpp  StateMachine.cpp  StateMachine_backup.cpp  StateMachine_working.cpp  Timer.cpp  Vision.cpp  down_forwards.cpp  main.cpp  pid_manager.cpp  pidtest.cpp  single_use_timer.cpp  state_machine.cpp  statemachineold.cpp
src/Actions/: MarkerAlign.cpp  MarkerMath.cpp
src/mission/: Base.cpp  Controller.cpp  Mission.cpp  Test.cpp
src/task/: Base.cpp  Buoy.cpp  Example.cpp  Gate.cpp  Marker.cpp  Task.cpp  TaskBase.cpp  TaskBuoy.cpp  TaskExample.cpp  TaskGate.cpp  TaskMarker.cpp  TaskTest.cpp  Test.cpp
src/tasks/: Task.cpp  TaskBuoy.cpp  TaskExample.cpp  TaskGate.cpp  TaskGate.cpp.save  TaskGateVision.cpp  TaskGate_workingSave.cpp  TaskKill.cpp  TaskMarker.cpp  TaskQualGate.cpp  TaskTest.cpp  TaskVision.cpp  drive_along_marker.cpp  kill.cpp  task.cpp  task_buoy.cpp  task_gate.cpp  task_gate_vision.cpp
(+13 files in other folders)
